# incident-triage-openenv

./: .gitignore  Dockerfile  README.md  app.py  environment.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tasks/: __init__.py  brute_force_login.py  insider_data_exfil.py  lateral_movement.py
tests/: conftest.py
